--- a/React/starter/my-app/src/style.css
+++ b/React/starter/my-app/src/style.css
@@ -1,17 +1,19 @@
 body {
     height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 h1,
+h3,
 p {
-    font-family: Lato;
-    margin: auto;
+    margin: 1rem auto;
+    text-align: center;
+    font-family: sans-serif;
 }
 
-/* Button */
 button {
     width: auto;
     margin: auto;
@@ -23,25 +25,11 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 0px 12px #03030350;
+    box-shadow: 0 0 12px #03030350;
 }
 
-/* Loader */
-.loader {
-    margin: auto;
-    border: 4px solid #03030375;
-    border-top: 4px solid #030303;
-    border-radius: 50%;
-    width: 1.25rem;
-    height: 1.25rem;
-    animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+.error-boundary {
+    padding: 0.5rem 1rem;
+    border: solid 4px #ff0000;
+    border-radius: 0.5rem;
 }
